<resources>
    <string name="app_name" translatable="false">My Ethio Telcom</string>
    <string name="app_description">this is my simplified ethio telecom package buying app. </string>
    <string name="first_page_label">Welcome to my Ethio-Telecom app</string>
    <string name="voice_dialog_title">Buy Voice Package</string>
    <string name="data_dialog_title">Buy Data Package</string>
    <string name="sms_dialog_title">Buy SMS Package</string>
    <string name="voice_dialog_text">buying voice package </string>
    <string name="data_dialog_text">buy data package</string>
    <string name="voice">buy voice package</string>
    <string name="data">buy data package</string>
    <string name="sms">buy sms package</string>

    <string name="daily_voice">daily voice package</string>
    <string name="weekly_voice">weekly voice package</string>
    <string name="monthly_voice">monthly package</string>

    <string name="daily_data">daily data package</string>
    <string name="weekly_data">weekly data package</string>
    <string name="monthly_data">monthly data package</string>

    <string name="daily_sms">daily sms package</string>
    <string name="weekly_sms">weekly sms package</string>
    <string name="monthly_sms">monthly sms package</string>

    <string name="card_transfer">transfer card</string>
    <string name="unlimited">unlimited</string>
    <string name="about">about</string>
    <string name="back">back</string>
    <string name="sms_dialog_text">buying sms package</string>
</resources>