<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="12dp">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_manage" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:gravity="center"
        android:text="@string/first_page_label" />

    <Button
        android:id="@+id/voiceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voice" />

    <Button
        android:id="@+id/dataButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data" />

    <Button
        android:id="@+id/smsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms" />

    <Button
        android:id="@+id/cardTransferButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_transfer" />

</LinearLayout>